# projetos_em_python

./: .gitignore  README.md
database/: banco.py
mini_sistema/: insomnia_sistema_bancario_collection.yaml  main.py  pyproject.toml  security.py
mini_sistema/database/: banco.py
mini_sistema/routes/: clientes.py  contas.py
mini_sistema/schemas/: cliente_schema.py  contas_schema.py
mini_sistema/services/: auth.py
routes/: auth_router.py  contas.py  transacoes.py
schemas/: cliente_completo_schema.py  login_schema.py  transacoes_schema.py
